tests/fsharp/conformance/inference/E_LeftToRightOverloadResolution01.bsl

E_LeftToRightOverloadResolution01.fsx(7,23,7,51): typecheck error FS0041: A unique overload for method 'WriteLine' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: 'a

Candidates:
 - System.Console.WriteLine(buffer: char[]) : unit
 - System.Console.WriteLine(format: string, [<System.ParamArray>] arg: obj[]) : unit
 - System.Console.WriteLine(value: bool) : unit
 - System.Console.WriteLine(value: char) : unit
 - System.Console.WriteLine(value: decimal) : unit
 - System.Console.WriteLine(value: float) : unit
 - System.Console.WriteLine(value: float32) : unit
 - System.Console.WriteLine(value: int) : unit
 - System.Console.WriteLine(value: int64) : unit
 - System.Console.WriteLine(value: obj) : unit
 - System.Console.WriteLine(value: string) : unit
 - System.Console.WriteLine(value: uint32) : unit
 - System.Console.WriteLine(value: uint64) : unit

E_LeftToRightOverloadResolution01.fsx(9,23,9,51): typecheck error FS0041: A unique overload for method 'WriteLine' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: 'a

Candidates:
 - System.Console.WriteLine(buffer: char[]) : unit
 - System.Console.WriteLine(format: string, [<System.ParamArray>] arg: obj[]) : unit
 - System.Console.WriteLine(value: bool) : unit
 - System.Console.WriteLine(value: char) : unit
 - System.Console.WriteLine(value: decimal) : unit
 - System.Console.WriteLine(value: float) : unit
 - System.Console.WriteLine(value: float32) : unit
 - System.Console.WriteLine(value: int) : unit
 - System.Console.WriteLine(value: int64) : unit
 - System.Console.WriteLine(value: obj) : unit
 - System.Console.WriteLine(value: string) : unit
 - System.Console.WriteLine(value: uint32) : unit
 - System.Console.WriteLine(value: uint64) : unit
